MODON MRE BPDEV/force-app/main/default/objects/UAEPassConfig__mdt/UAEPassConfig__mdt.object-meta.xml
<CustomObject>
    <label>UAE Pass Config</label>
    <pluralLabel>UAE Pass Configs</pluralLabel>
</CustomObject>