MODON MRE BPDEV/force-app/main/default/objects/UAEPassConfig__mdt/fields/Acr_Values__c.field-meta.xml
<CustomField>
    <fullName>Acr_Values__c</fullName>
    <label>Acr Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>