MODON MRE BPDEV/force-app/main/default/objects/UAEPassConfig__mdt/fields/Redirect_Uri__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Uri__c</fullName>
    <label>Redirect Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>