MODON MRE BPDEV/force-app/main/default/objects/UAEPassConfig__mdt/fields/State_Secret__c.field-meta.xml
<CustomField>
    <fullName>State_Secret__c</fullName>
    <label>State Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>